--- a/InetMarket/Views/Home/Index.cshtml
+++ b/InetMarket/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<a asp-action="Register" asp-controller="Account">Регистрация</a><br />
+<a asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
