--- a/InetMarket/Views/Filters/CategorySearch.cshtml
+++ b/InetMarket/Views/Filters/CategorySearch.cshtml
@@ -30,7 +30,7 @@
                     @Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "compItem" }) |
                     @Html.ActionLink("Подробно", "Details", new { id = item.Id }, new { @class = "compItem" }) |
                     @Html.ActionLink("Удалить", "Delete", new { id = item.Id }, new { @class = "compItem" }) |
-                    @Html.ActionLink("Доп фильтры", "FilterSearch", new { filterId = item.Id }, new { @class = "compItem" })
+                    @Html.ActionLink("Доп фильтры", "FilterSearch", new { filterId = item.Id }@*, new { @class = "compItem" }*@)
                 </td>
             </tr>
         }
