--- a/InetMarket/Views/Products/CategorySearch.cshtml
+++ b/InetMarket/Views/Products/CategorySearch.cshtml
@@ -69,6 +69,7 @@
                             @Html.DisplayFor(modelItem => item.Provider.Title)
                         </td>
                         <td>
+                            @Html.ActionLink("Фильтры", "EditFilters", new { id = item.Id }) |
                             @Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "compItem" }) |
                             @Html.ActionLink("Подробно", "Details", new { id = item.Id }, new { @class = "compItem" }) |
                             @Html.ActionLink("Удалить", "Delete", new { id = item.Id }, new { @class = "compItem" })
