--- a/InetMarket/Views/Products/Edit.cshtml
+++ b/InetMarket/Views/Products/Edit.cshtml
@@ -10,7 +10,7 @@
         <hr />
         <div class="row">
             <div class="col-md-4">
-                <form asp-action="Edit">
+                <form asp-action="Edit" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <input type="hidden" asp-for="Id" />
                     <div class="form-group">
@@ -24,9 +24,7 @@
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="MainImage" class="control-label"></label>
-                        <input asp-for="MainImage" class="form-control" />
-                        <span asp-validation-for="MainImage" class="text-danger"></span>
+                        <input type="file" name="uploadedFile" />
                     </div>
                     <div class="form-group">
                         <div class="checkbox">
